--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -6,6 +6,8 @@
       <tr>
         <th>Name</th>
         <th>Description</th>
+        <th>Composer</th>
+        <th>Lyricist</th>
         <th>Category</th>
         <th>Voicing</th>
         <th>Sheet Music</th>
@@ -16,10 +18,12 @@
         <tr>
           <td><%= composition.name %></td>
           <td><%= composition.description %></td>
+          <td><%= composition.composer %></td>
+          <td><%= composition.lyricist %></td>
           <td><%= Category.find(composition.category).name %></td>
           <td><%= Voicing.find(composition.voicing).name %></td>
-          <td><%= link_to 'sheet music', '/uploads/'+composition.sheet_music_url %></td>
-          <td><%= link_to 'recording', '/uploads/'+composition.recording_url %></td>
+          <td><%= link_to composition.sheet_music_file, '/uploads/'+composition.sheet_music_file %></td>
+          <td><%= link_to composition.recording_file, '/uploads/'+composition.recording_file %></td>
           <td>
             <%= link_to "edit", { :action => "edit", :id => composition.id } %>
             <%= link_to "delete", { :action => "delete", :id => composition.id },
