--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -2,7 +2,7 @@
   <div class="span10 offset1 well">
     <h2 class="text-center">Manage Compositions</h2>
     <% if @compositions && @compositions.size > 0 %>
-    <table class="table table-striped table-bordered">
+    <table class="table table-striped table-bordered stay_within_well">
       <tr>
         <th>Name</th>
         <th>Description</th>
