--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
   <div class="span6 offset3 well">
     <h2 class="text-center">Manage Categories</h2>
     <% if @categories && @categories.size > 0 %>
-      <table class='table table-striped table-bordered'>
+      <table class='table table-striped table-bordered stay_within_well'>
         <tr>
           <th>Name</th>
           <th>Actions</th>
