--- a/app/views/files/index.html.erb
+++ b/app/views/files/index.html.erb
@@ -4,7 +4,7 @@
     <h2 class="text-center">Manage Files</h2>
     <%= render :partial => 'shared/flash_messages'%>
     <% if @files && @files.size > 0 %>
-      <table class='table table-striped table-bordered'>
+      <table class='table table-striped'>
         <tr>
           <th>Name</th>
           <th>Action</th>
