--- a/app/views/voicings/index.html.erb
+++ b/app/views/voicings/index.html.erb
@@ -2,7 +2,7 @@
   <div class="span6 offset3 well">
     <h2 class="text-center">Manage Voicing and Instrumentation</h2>
     <% if @voicings && @voicings.size > 0 %>
-      <table class='table table-striped table-bordered'>
+      <table class='table table-striped table-bordered stay_within_well'>
         <tr>
           <th>Name</th>
           <th>Actions</th>
