--- a/app/views/voicings/new.html.erb
+++ b/app/views/voicings/new.html.erb
@@ -3,7 +3,7 @@
     <h2 class="text-center">Create Voicing or Instrumentation</h2>
     <%= form_for @voicing do |f| %>
       <%= f.error_messages %><br/>
-      <%= f.text_field :name, :placeholder => "Voicing or Instrumentation Name", :class => "input-xxlarge" %>
+      <%= f.text_field :name, :placeholder => "Voicing or Instrumentation Name", :class => "input-xxlarge stay_within_well" %>
       <div class="controls text-right">
         <%= link_to "cancel", voicings_path %>
         <%= f.submit "Save", :class => "btn btn-primary" %>
