--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,9 +11,12 @@
         <tr>
           <td><%=category.name%></td>
           <td>
-            <%= link_to "edit", { :action => "edit", :id => category.id } %>
-            <%= link_to "delete", { :action => "delete", :id => category.id },
-              :confirm => "Are you sure you want to delete this category?", :method => :delete %>
+            <%= link_to edit_category_path(category.id), :title => "Edit Category" do %>
+              <i class="icon-pencil"></i>
+            <% end %>
+            <%= link_to delete_category_path(category.id), :title => "Delete Category", :confirm => "Are you sure you want to delete this category?", :method => :delete do %>
+              <i class="icon-trash"></i>
+            <% end %>
           </td>
         </tr>
         <% end %>
