--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -25,9 +25,12 @@
           <td><%= link_to composition.sheet_music_file, '/uploads/'+composition.sheet_music_file %></td>
           <td><%= link_to composition.recording_file, '/uploads/'+composition.recording_file %></td>
           <td>
-            <%= link_to "edit", { :action => "edit", :id => composition.id } %>
-            <%= link_to "delete", { :action => "delete", :id => composition.id },
-              :confirm => "Are you sure you want to delete this composistion?", :method => :delete %>
+            <%= link_to edit_composition_path(composition.id), :title => "Edit Composition" do %>
+              <i class="icon-pencil"></i>
+            <% end %>
+            <%= link_to delete_composition_path(composition.id), :title => "Delete Composition", :confirm => "Are you sure you want to delete this composition?", :method => :delete do %>
+              <i class="icon-trash"></i>
+            <% end %>
           </td>
         </tr>
       <% end %>
