--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,9 +19,12 @@
         <% end %>
           </td>
           <td>
-        <a href="<%=edit_user_path(user)%>">edit</a> 
-        <%= link_to "delete", { :action => "delete", :id => user.id },
-          :confirm => "Are you sure you want to delete this user?", :method => :delete %>
+            <%= link_to edit_user_path(user.id), :title => "Edit User" do %>
+              <i class="icon-pencil"></i>
+            <% end %>
+            <%= link_to delete_user_path(user.id), :title => "Delete User", :confirm => "Are you sure you want to delete this user?", :method => :delete do %>
+              <i class="icon-trash"></i>
+            <% end %>
           </td>
       <% end %>
       </table>
