--- a/app/views/voicings/index.html.erb
+++ b/app/views/voicings/index.html.erb
@@ -11,9 +11,12 @@
         <tr>
           <td><%=voicing.name%></td>
           <td>
-            <%= link_to "edit", { :action => "edit", :id => voicing.id } %>
-            <%= link_to "delete", { :action => "delete", :id => voicing.id },
-              :confirm => "Are you sure you want to delete this voicing or instrumention?", :method => :delete %>
+            <%= link_to edit_voicing_path(voicing.id), :title => "Edit Voicing or Instrumentation" do %>
+              <i class="icon-pencil"></i>
+            <% end %>
+            <%= link_to delete_voicing_path(voicing.id), :title => "Delete Voicing or Instrumentation", :confirm => "Are you sure you want to delete this voicing or instrumentation?", :method => :delete do %>
+              <i class="icon-trash"></i>
+            <% end %>
           </td>
         </tr>
         <% end %>
