--- a/app/views/compositions/new.html.erb
+++ b/app/views/compositions/new.html.erb
@@ -5,6 +5,7 @@
       <%= f.error_messages %><br/>
       <%= f.text_field :name, :placeholder => "Title", :class => "input-xxlarge stay_within_well" %>
       <%= f.text_field :composer, :placeholder => "Composer", :class => "input-xxlarge stay_within_well" %>
+      <%= f.text_field :arranger, :placeholder => "Arranger", :class => "input-xxlarge stay_within_well" %>
       <%= f.text_field :lyricist, :placeholder => "Lyricist", :class => "input-xxlarge stay_within_well" %>
       <%= f.text_area :description, :placeholder => "Description", :class => "input-xxlarge stay_within_well", :rows => 5 %>
       <%= f.label :category, "Category "%>
