--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row-fluid">
   <div class="manage_compositions well">
     <h2 class="text-center">Manage Compositions</h2>
+    <h5 class="text-center"><span class="published">published</span> | <span class="unpublished">unpublished</span></h5>
     <% if @compositions && @compositions.size > 0 %>
     <table class="table table-striped table-bordered stay_within_well">
       <tr>
@@ -16,7 +17,7 @@
         <th>Action</th>
       </tr>
       <% @compositions.each do |composition| %>
-        <tr>
+        <tr class='<%=composition.published ? "published" : "unpublished"%>'>
           <td><%= composition.name %></td>
           <td><%= composition.description %></td>
           <td><%= composition.composer %></td>
