--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -1,12 +1,10 @@
 <div class="row-fluid">
   <div class="manage_compositions well">
     <h2 class="text-center">Manage Compositions</h2>
-    <h5 class="text-center"><span class="published">published</span> | <span class="unpublished">unpublished</span></h5>
     <% if @compositions && @compositions.size > 0 %>
     <table class="table table-striped table-bordered stay_within_well">
       <tr>
-        <th>Name</th>
-        <th>Description</th>
+        <th>Title</th>
         <th>Composer</th>
         <th>Arranger</th>
         <th>Lyricist</th>
@@ -14,12 +12,12 @@
         <th>Voicing</th>
         <th>Sheet Music</th>
         <th>Recording</th>
+        <th>Published</th>
         <th>Action</th>
       </tr>
       <% @compositions.each do |composition| %>
-        <tr class='<%=composition.published ? "published" : "unpublished"%>'>
+        <tr>
           <td><%= composition.name %></td>
-          <td><%= composition.description %></td>
           <td><%= composition.composer %></td>
           <td><%= composition.arranger %></td>
           <td><%= composition.lyricist %></td>
@@ -27,6 +25,7 @@
           <td><%= Voicing.find(composition.voicing).name %></td>
           <td><%= link_to composition.sheet_music_file, '/uploads/'+composition.sheet_music_file %></td>
           <td><%= link_to composition.recording_file, '/uploads/'+composition.recording_file %></td>
+          <td class='<%= composition.published ? "published" : "unpublished" %>'></strong><%= composition.published ? 'YES' : 'NO'%></td>
           <td>
             <%= link_to edit_composition_path(composition.id), :title => "Edit Composition" do %>
               <i class="icon-pencil"></i>
