--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="navbar-inner">
     <a class="brand" href="/">Baird-Conklin Music</a>
-    <form class="navbar-search pull-left" action="search" method="get">
+    <form class="navbar-search pull-left" action="/search" method="get">
       <input type="text" class="search-query" placeholder="Search" name="search"/>
       <button type="submit" class="search-button" title="search"><i class="icon-white icon-search"></i></button>
     </form>
@@ -50,6 +50,11 @@
           </ul>
         </li>
       <% else %>
+        <ul class="nav pull-left">
+          <li>
+            <a href="<%=new_user_path%>">Create Account</a>
+          </li>
+        </ul>
         <ul class="nav pull-left">
           <li>
             <a href="<%=login_users_path%>">Sign In</a>
