--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,7 +4,7 @@
     <% if @compositions && @compositions.size > 0 %>
     <table class="table table-striped table-bordered stay_within_well">
       <tr>
-        <th>Title</th>
+        <th>Title <span class="text-small">(click for details)</span></th>
         <th>Composer</th>
         <th>Arranger</th>
         <th>Lyricist</th>
@@ -13,7 +13,7 @@
       </tr>
       <% @compositions.each do |composition| %>
         <tr>
-          <td><%= composition.name %></td>
+          <td><%= link_to composition.name, composition_path(composition.id) %></td>
           <td><%= composition.composer %></td>
           <td><%= composition.arranger %></td>
           <td><%= composition.lyricist %></td>
