Restored like button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
+  <%= render 'layouts/like' %>
   <%= yield %>
   <div class='text-center'>
     <%= link_to 'Baird-Conklin Math', '/bairdconklinmath'%>
