--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,7 +61,7 @@
           </li>
         </ul>
       <% end %>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="/contact_us">Contact Us</a></li>
     </ul>
   </div>
 </div>
