--- a/app/views/compositions/show.html.erb
+++ b/app/views/compositions/show.html.erb
@@ -5,7 +5,7 @@
       <span class="pull-left"><span class="text-bold">Category: </span> <%= Category.find(@composition.category).name %></span>
     </div>
     <div class="row-fluid">
-      <span class="pull-left"><span class="text-bold">Voicing or Instrumentation: </span> <%= Voicing.find(@composition.voicing).name %></span>
+      <span class="pull-left"><span class="text-bold">Instrumentation/Voicing: </span> <%= Voicing.find(@composition.voicing).name %></span>
     </div>
     <br/>
     <div class="row-fluid">
