--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,10 +27,10 @@
               <a href="<%=files_path%>">Files</a>
             </li>
             <li>
-              <a href="<%=users_path%>">Users</a>
+              <a href="<%=voicings_path%>">Instrumentation/Voicing</a>
             </li>
             <li>
-              <a href="<%=voicings_path%>">Voicing and Instrumentation</a>
+              <a href="<%=users_path%>">Users</a>
             </li>
           </ul>
         </li>
