--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -9,7 +9,7 @@
         <th>Arranger</th>
         <th>Lyricist</th>
         <th>Category</th>
-        <th>Voicing</th>
+        <th>Instrumentation/Voicing</th>
       </tr>
       <% @compositions.each do |composition| %>
         <tr>
