--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -9,7 +9,7 @@
         <th>Arranger</th>
         <th>Lyricist</th>
         <th>Category</th>
-        <th>Voicing</th>
+        <th>Instrumentation/Voicing</th>
         <th>Sheet Music</th>
         <th>Recording</th>
         <th>Published</th>
