--- a/app/views/voicings/edit.html.erb
+++ b/app/views/voicings/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="row-fluid">
   <div class="span6 offset3 well">
-    <h2 class="text-center">Edit Voicing or Instrumentation</h2>
+    <h2 class="text-center">Edit Instrumentation/Voicing</h2>
     <%= form_for @voicing do |f| %>
       <%= f.error_messages %><br/>
-      <%= f.text_field :name, :placeholder => "Voicing or Instrumentation Name", :class => "input-xxlarge stay_within_well" %>
+      <%= f.text_field :name, :placeholder => "Instrumentation/Voicing Name", :class => "input-xxlarge stay_within_well" %>
       <div class="controls text-right">
         <%= link_to "cancel", voicings_path %>
         <%= f.submit "Save", :class => "btn btn-primary" %>
