--- a/app/views/voicings/index.html.erb
+++ b/app/views/voicings/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
   <div class="span6 offset3 well">
-    <h2 class="text-center">Manage Voicing and Instrumentation</h2>
+    <h2 class="text-center">Manage Instrumentation/Voicing</h2>
     <% if @voicings && @voicings.size > 0 %>
       <table class='table table-striped table-bordered stay_within_well'>
         <tr>
@@ -11,10 +11,10 @@
         <tr>
           <td><%=voicing.name%></td>
           <td>
-            <%= link_to edit_voicing_path(voicing.id), :title => "Edit Voicing or Instrumentation" do %>
+            <%= link_to edit_voicing_path(voicing.id), :title => "Edit Instrumentation/Voicing" do %>
               <i class="icon-pencil"></i>
             <% end %>
-            <%= link_to delete_voicing_path(voicing.id), :title => "Delete Voicing or Instrumentation", :confirm => "Are you sure you want to delete this voicing or instrumentation?", :method => :delete do %>
+            <%= link_to delete_voicing_path(voicing.id), :title => "Delete Instrumentation/Voicing", :confirm => "Are you sure you want to delete this instrumentation/voicing?", :method => :delete do %>
               <i class="icon-trash"></i>
             <% end %>
           </td>
@@ -22,11 +22,11 @@
         <% end %>
       </table>
     <% else %>
-      No Voicing or Instrumentation Found
+      No Instrumentation/Voicing Found
     <% end %>
     <div class="controls text-right">
       <%= link_to "cancel", "/" %>
-      <%= link_to "Add Voicing or Instrumentation", new_voicing_path, :class => "btn btn-primary" %>
+      <%= link_to "Add Instrumentation/Voicing", new_voicing_path, :class => "btn btn-primary" %>
     </div>
   </div>
 </div>
