Added links to other websites

--- a/app/views/compositions/show.html.erb
+++ b/app/views/compositions/show.html.erb
@@ -53,4 +53,7 @@
       <a href="javascript:history.go(-1)">Back</a>
     </div>
   </div>
+  <div class="span2 offset1 text-center">
+    <%= render 'shared/other_websites' %>
+  </div>
 </div>
