--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -26,4 +26,7 @@
       No Results Found
     <% end %>
   </div>
+  <div class="span2 text-center">
+    <%= render 'shared/other_websites' %>
+  </div>
 </div>
