--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,4 +33,7 @@
       </div>
     <% end %>
   </div>
+  <div class="span2 text-center">
+    <%= render 'shared/other_websites' %>
+  </div>
 </div>
