--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,13 +12,13 @@
         write commissioned pieces specifically suited to your needs for an additional fee.</p>
         <br/>
         <h4 class="text-center">What's New?</h4>
-        <p>Compositions are now searchable using the search field on the top menu bar.  You can view printed music and listen to recordings.
+        <p>Compositions are now searchable using the search field and browse link on the top menu bar.  You can view printed music and listen to recordings.
            It is not necessary to create an account, but having an account will allow you to purchase music later once that functionality 
            is implemented and give you unlimited access to purchased music.
         </p>
         <br/>
         <h4 class="text-center">Coming Soon</h4>
-        <p>The browse button is not yet functional.  We will be adding browse capabilities and uploading more compositions soon.
+        <p>We will be adding sorting and pagination to search results and uploading many more compositions soon.
         </p>
       </div>
       <div class="span6">
