--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
       <button type="submit" class="search-button" title="search"><i class="icon-white icon-search"></i></button>
     </form>
     <ul class="nav pull-left">
-      <li><a href="#">Browse</a></li>
+      <li><a href="/search/browse">Browse</a></li>
     </ul>
     <ul class="nav pull-right">
       <% if @current_user %>
