Fixed search bug

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-inner">
     <a class="brand" href="/">Baird-Conklin Music</a>
     <form class="navbar-search pull-left" action="/search" method="get">
-      <input type="text" class="search-query" placeholder="Search" name="search"/>
+      <input type="text" class="search-query" placeholder="Search" name="match"/>
       <button type="submit" class="search-button" title="search"><i class="icon-white icon-search"></i></button>
     </form>
     <ul class="nav pull-left">
