--- a/app/assets/stylesheets/customize.css
+++ b/app/assets/stylesheets/customize.css
@@ -1,4 +1,4 @@
-ul.nav li.dropdown:hover > ul.dropdown-menu{
+ul.nav li.dropdown:hover > ul.dropdown-menu {
   display: block;    
 }
 
@@ -32,7 +32,7 @@ div.field_with_errors input {
 
 .navbar-inner {
     background-color: red;
-    background-image: linear-gradient(to bottom, Indigo, Navy);
+    background-image: linear-gradient(to bottom, #808, Navy);
     background-repeat: repeat-x;
     border: 0px solid DarkRed;
     border-radius: 4px 4px 4px 4px;
@@ -126,7 +126,7 @@ div.field_with_errors input {
 }
 
 body {
-  background-color: LightSteelBlue
+  background-color: LightSteelBlue;
 }
 
 #flash_messages {
