--- a/app/views/files/index.html.erb
+++ b/app/views/files/index.html.erb
@@ -3,7 +3,7 @@
     <%= @upload_dir %>
     <h2 class="text-center">Manage Files</h2>
     <%= render :partial => 'shared/flash_messages'%>
-    <% if @files && @files.size > 0 %>
+    <% if @files && @files.count > 0 %>
       <table class='table table-striped'>
         <tr>
           <th>Name</th>
@@ -11,9 +11,9 @@
         </tr>
         <% for file in @files %>
           <tr>
-            <td><%= File.basename(file) %></td>
+            <td><%= file.filename %></td>
             <td>
-              <%= link_to raw('<i class="icon-trash"></i>'), { :action => "delete", :file => file },
+              <%= link_to raw('<i class="icon-trash"></i>'), { :action => "delete", :filename => file.filename },
                 :title => "Delete File", :confirm => "Are you sure you want to delete this file?", :method => :delete %>
             </td>
           </tr>
