Add auto-scroll to all wells

--- a/app/views/compositions/show.html.erb
+++ b/app/views/compositions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span6 offset3 well">
+  <div class="span6 offset3 well" style="overflow: auto;">
     <h2 class="text-center"><%= @composition.name %></h2>
     <div class="row-fluid">
       <span class="pull-left"><span class="text-bold">Category: </span> <%= Category.find(@composition.category).name %></span>
