--- a/app/views/files/index.html.erb
+++ b/app/views/files/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span6 offset3 well">
+  <div class="span6 offset3 well" style="overflow: auto;">
     <%= @upload_dir %>
     <h2 class="text-center">Manage Files</h2>
     <%= render :partial => 'shared/flash_messages'%>
