--- a/app/views/mathtools/factor.html.erb
+++ b/app/views/mathtools/factor.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span8 offset2 well">
+  <div class="span8 offset2 well" style="overflow: auto;">
     <%= render :partial => 'shared/flash_messages'%>
     <h2 class="text-center">Prime Factorization</h2>
       <table style="table">
