--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span4 offset4 well text-center">
+  <div class="span4 offset4 well text-center" style="overflow: auto;">
     <h3>Edit Account</h3>
     <%= form_for @user do |f| %>
       <%= f.error_messages %><br/>
