--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span6 offset3 well">
+  <div class="span6 offset3 well" style="overflow: auto;">
     <h2 class="text-center">Create Category</h2>
     <%= form_for @category do |f| %>
       <%= f.error_messages %><br/>
