--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="manage_compositions well">
+  <div class="manage_compositions well" style="overflow: auto;">
     <h2 class="text-center">Manage Compositions</h2>
     <% if @compositions && @compositions.size > 0 %>
     <table class="table table-striped table-bordered stay_within_well">
