--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span6 offset3 well">
+  <div class="span6 offset3 well" style="overflow: auto;">
     <%= render :partial => 'shared/flash_messages'%>
     <h1 class="text-center">Reversi</h1>
     <button class="btn btn-success" type="button" onclick="newGame();">new game</button>
