--- a/app/views/games/test_reversi.html.erb
+++ b/app/views/games/test_reversi.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span6 offset3 well">
+  <div class="span6 offset3 well" style="overflow: auto;">
     <%= render :partial => 'shared/flash_messages'%>
     <h2 class="text-center">Reversi</h2>
     <%= link_to 'new', "javascript:newGame();", :confirm => 'Are you sure you want to start a new game?'%> | 
