--- a/app/views/search/browse.html.erb
+++ b/app/views/search/browse.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span6 offset3 well">
+  <div class="span6 offset3 well" style="overflow: auto;">
     <h3 class="text-center">Browse by Category</h3>
     <div class="text-center">
     | <% @categories.each do |category| %>
