--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span8 offset2 well">
+  <div class="span8 offset2 well" style="overflow: auto;">
     <h2 class="text-center">Search Results</h2>
     <% if @compositions && @compositions.size > 0 %>
     <table class="table table-striped table-bordered stay_within_well">
