--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span4 offset4 well">
+  <div class="span4 offset4 well" style="overflow: auto;">
     <h2 class="text-center">Contact Us</h2>
     <br/>
     <div class="text-center">
