--- a/app/views/static_pages/math.html.erb
+++ b/app/views/static_pages/math.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span8 offset2 well">
+  <div class="span8 offset2 well" style="overflow: auto;">
     <%= render :partial => 'shared/flash_messages'%>
     <h2 class="text-center">Baird-Conklin Math</h2>
     <div class="row-fluid">
