--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span8 offset2 well">
+  <div class="span8 offset2 well" style="overflow: auto;">
     <h2 class="text-center">Manage Users</h2>
     <% if @user_list && @user_list.size > 0 %>
       <table class='table table-striped table-bordered'>
