--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span4 offset4 well text-center">
+  <div class="span4 offset4 well text-center" style="overflow: auto;">
     <h3>Sign In</h3>
     <%= render :partial => 'shared/flash_messages'%>
     <%= form_tag login_users_path, :method => 'post' do |f| %>
