--- a/app/views/voicings/index.html.erb
+++ b/app/views/voicings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span6 offset3 well">
+  <div class="span6 offset3 well" style="overflow: auto;">
     <h2 class="text-center">Manage Instrumentation/Voicing</h2>
     <% if @voicings && @voicings.size > 0 %>
       <table class='table table-striped table-bordered stay_within_well'>
