--- a/app/views/compositions/edit.html.erb
+++ b/app/views/compositions/edit.html.erb
@@ -3,6 +3,7 @@
     <h2 class="text-center">Edit Composition</h2>
     <%= form_for @composition do |f| %>
       <%= f.error_messages %><br/>
+      <%= hidden_field_tag :source, @source %>
       <%= f.text_field :name, :placeholder => "Title", :class => "input-xxlarge stay_within_well" %>
       <%= f.text_field :composer, :placeholder => "Composer", :class => "input-xxlarge stay_within_well" %>
       <%= f.text_field :arranger, :placeholder => "Arranger", :class => "input-xxlarge stay_within_well" %>
@@ -19,7 +20,11 @@
       <%= f.label :recording_file, "Audio File"%>
       <%= f.select :recording_file, options_for_select(@audio_files, @composition.recording_file) %>
       <div class="controls text-right">
-        <%= link_to "cancel", composition_path(@composition) %>
+        <% if @source == 'show' %>
+          <%= link_to "cancel", composition_path(@composition) %>
+        <% else %>
+          <%= link_to "cancel", compositions_path %>
+        <% end %>
         <%= f.submit "Save", :class => "btn btn-primary" %>
         <% if @composition.published %>
           <%= f.submit "Un-Publish", :class => "btn btn-danger" %>
