--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -41,7 +41,7 @@
           </td>
           <td class='<%= composition.published ? "published" : "unpublished" %>'></strong><%= composition.published ? 'YES' : 'NO'%></td>
           <td>
-            <%= link_to edit_composition_path(composition.id), :title => "Edit Composition" do %>
+            <%= link_to edit_composition_path(composition.id, source: 'index'), :title => "Edit Composition" do %>
               <i class="icon-pencil"></i>
             <% end %>
             <%= link_to delete_composition_path(composition.id), :title => "Delete Composition", :confirm => "Are you sure you want to delete this composition?", :method => :delete do %>
