Fixed math links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= render 'layouts/like' %>
   <%= yield %>
   <div class='text-center'>
-    <%= link_to 'Baird-Conklin Math', '/bairdconklinmath'%>
+    <%= link_to 'Baird-Conklin Math', 'https://bairdconklinmath.herokuapp.com'%>
   </div>
 </body>
 </html>
