--- a/app/views/shared/_other_websites.html.erb
+++ b/app/views/shared/_other_websites.html.erb
@@ -1,4 +1,4 @@
 <h4>Our Other Websites</h4>
-<a href="/bairdconklinmath">Baird-Conklin Math</a><br/>
+<a href="https://bairdconklinmath.herokuapp.com">Baird-Conklin Math</a><br/>
 <a href="http://muchadopodcast.com">Much Ado Podcast</a><br/>
 <a href="http://thomasalanconklin.blogspot.com">Stuff I Think About</a>
